<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:background="@color/background_light"
			  android:orientation="vertical">

	<TextView
		android:id="@+id/textView1"
		style="@style/PaddedText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/please_login"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<EditText
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginTop="16dp"
		android:hint="@string/phone_number"
		android:inputType="text"/>

	<EditText
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginTop="16dp"
		android:hint="@string/pin"
		android:inputType="textPassword"/>

</LinearLayout>
